<resources>
    <string name="app_name">JPDemos</string>

    <string name="test_result_hint">测试结果</string>

    <!--Thread control-->
    <string name="name_thread_control">线程控制</string>
    <!--Thread control test case name-->
    <string name="test_normal_start">正常启动两个线程</string>
    <string name="test_join_start">B调用A的join方法</string>
    <string name="wait_start">A wait,B调用notify唤醒A</string>
    <string name="test_countDownLatch_start">D等ABC运行完再启动</string>
    <string name="test_all_ready_start">ABC准备好后一起启动</string>
    <string name="test_do_task_start">子线程传递数据到主线程</string>
    <string name="test_executorService_start">ExecutorService配合FutureTask传递结果</string>

    <!--Touch event-->
    <string name="name_touch_event">事件分发</string>
    <string name="btn_touch_me">Touch me</string>
    <string name="btn_touch_true">View onTouch 返回true</string>
    <string name="btn_touch_click_true">View click功能为true</string>
    <string name="btn_touch_event_clear">清除内容</string>

    <!--Debug GPU Override-->
    <string name="name_gpu_override">调试GPU过度重绘</string>
    <string name="name_gpu_override_text">过度重绘</string>
    <string name="name_gpu_not_override_text">没有过度重绘</string>

    <!--Nine Path-->
    <string name="name_nine_path">.9.png 测试</string>

    <!--Memory Test-->
    <string name="name_memory_test">内存泄漏测试</string>

    <!--Exception test-->
    <string name="name_exception_test">Exception错误测试</string>
    <string name="exception_test_des">一个try块下面有多个catch块，其中一个catch块内又抛出了异常，能被下面的catch块捕获吗？答案是不会。</string>

    <!--Memory Test-->
    <string name="name_activity_lifecycle_test">Activity生命周期</string>

    <!--Other-->
    <string name="name_other">其他</string>
</resources>
