<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="bottom">

        <TextView
            android:id="@+id/test_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/test_result_hint" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="10dp">

        <Button
            android:id="@+id/normal_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_normal_start" />

        <Button
            android:id="@+id/join_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/normal_start"
            android:text="@string/test_join_start" />

        <Button
            android:id="@+id/wait_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/normal_start"
            android:text="@string/wait_start" />

        <Button
            android:id="@+id/countDownLatch_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/normal_start"
            android:layout_toEndOf="@+id/wait_start"
            android:text="@string/test_countDownLatch_start" />

        <Button
            android:id="@+id/all_ready_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/countDownLatch_start"
            android:text="@string/test_all_ready_start" />

        <Button
            android:id="@+id/do_task_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/all_ready_start"
            android:text="@string/test_do_task_start" />

        <Button
            android:id="@+id/executorService_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/do_task_start"
            android:text="@string/test_executorService_start" />
    </RelativeLayout>
</LinearLayout>
